# voice_nvim_gpt_control

./: README.md  main.py  pyproject.toml
